Made ignoring files the default instead of adding unrestricted.